[*] fix progress bug and add effects

--- a/progress-steps/index.html
+++ b/progress-steps/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="container">
       <div class="progress-bar">
-         <div class="progress-bar__progress"></div>
+         <div class="progress-bar__progress" style="width: 0%"></div>
          <span class="progress-bar__step progress-bar__step--active">1</span>
          <span class="progress-bar__step">2</span>
          <span class="progress-bar__step">3</span>
