[*] fix disable buttons bug

--- a/progress-steps/index.html
+++ b/progress-steps/index.html
@@ -17,7 +17,7 @@
          <span class="progress-bar__step">4</span>
       </div>
       <div class="buttons">
-         <button class="button-previous">Previous</button>
+         <button class="button-previous button--locked">Previous</button>
          <button class="button-next">Next</button>
       </div>
    </div>
